experiments/3mm_mk3/tmp_files/5690.log
/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/5690.c(78): warning #161: unrecognized #pragma
    #pragma scop
            ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/5690.c(81): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 28) simd 
                                                    ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/5690.c(93): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 28) simd 
                                                    ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/5690.c(105): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 28) simd 
                                                    ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/5690.c(117): warning #161: unrecognized #pragma
    #pragma endscop
            ^

compilation aborted for /uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/5690.c (code 2)
